# flaskinni

./: .gitignore  README.md  pyproject.toml
app/: __init__.py
