[tool.poetry]
name = "flaskinni"
version = "0.1.0"
description = "A starting Python-Flask web app template with accompanying guide"
authors = ["Michael Piccirillo <70709374+Khrysys@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.3"
Flask-Admin = "^1.6.1"
Flask-BabelEx = "^0.9.4"
Flask-JWT-Extended = "^4.4.4"
Flask-Login = "^0.6.2"
Flask-Mail = "^0.9.1"
Flask-Migrate = "^4.0.4"
Flask-Moment = "^1.0.5"
Flask-OAuth = "^0.12"
Flask-Principal = "^0.4.0"
Flask-RESTful = "^0.3.9"
Flask-Script = "^2.0.6"
Flask-Security-Too = "^5.1.2"
Flask-Social = "^1.6.2"
Flask-SQLAlchemy = "^3.0.3"
Flask-Testing = "^0.8.1"
Flask-WTF = "^1.1.1"
python-dotenv = "^1.0.0"
flask-markdown = "^0.3"
python-slugify = "^8.0.1"
humanize = "^4.6.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
